Add BV equality subsolver

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -614,6 +614,8 @@ libcvc5_add_sources(
   theory/bv/bv_solver_bitblast.h
   theory/bv/bv_solver_bitblast_internal.cpp
   theory/bv/bv_solver_bitblast_internal.h
+  theory/bv/bv_solver_equality.cpp
+  theory/bv/bv_solver_equality.h
   theory/bv/bv_solver_subtheories.cpp
   theory/bv/bv_solver_subtheories.h
   theory/bv/int_blaster.cpp
